# graphql-datafusion

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  __rust-toolchain.toml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  TROUBLESHOOTING.md
examples/: Cargo.toml  README.md  advanced_analytics.rs  ai_integration.rs  all_examples.rs  basic_queries.rs
examples/src/: auth.rs  basic_queries.rs  graphql.rs  rate_limit.rs
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  rate_limit.rs  security.rs  server.rs
src/agents/: client.rs  config.rs  mod.rs  orchestrator.rs  types.rs
src/auth/: mod.rs
src/datafusion/: context.rs
src/graphql/: helpers.rs  mod.rs  query_translator.rs  resolvers.rs  schema.rs
src/models/: data.rs  mod.rs  schema_inference.rs
src/rate_limit/: mod.rs
src/security/: mod.rs
src/validation/: mod.rs
src/websocket/: handlers.rs
tests/: integration.rs  unit.rs
tests/config/: mod.rs
tests/error/: mod.rs
