[package]
name = "graphql-datafusion"
version = "0.1.0"
edition = "2024"

[lib]
name = "graphql_datafusion"
path = "src/lib.rs"

[[bin]]
name = "graphql-datafusion"
path = "src/server.rs"

[dependencies]
async-graphql = "7"        # GraphQL server # GraphQL derive macros
async-trait = "0.1"           # Async trait support
sqlparser = "0.7"             # SQL parsing
regex = "1.10"               # Regular expressions
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] } # SQL execution
actix-web = "4.11"      # HTTP server
datafusion = "48.0"         # DataFusion query engine
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # Serialization
tracing = "0.1"              # Tracing
tracing-subscriber = "0.3"  # Tracing subscriber
tracing-appender = "0.2"    # File appender
env_logger = "0.11"         # For compatibility with DataFusion
reqwest = { version = "0.12", features = ["json"] } # HTTP client for agent API calls
jsonwebtoken = "9.3"        # Authentication
prometheus = "0.13"         # Metrics
futures = "0.3"             # Async utilities
lazy_static = "1.5"# Static variables
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
config = "0.13"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
url = "2.5"
actix-web-httpauth ="0.8"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6" # For HTTP mock tests

[build-dependencies]

