[package]
name = "graphql-datafusion-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "7.0"
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9.3"
