[package]
name = "graphql-datafusion-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_queries"
path = "src/basic_queries.rs"

[[example]]
name = "ai_integration"
path = "src/ai_integration.rs"

[[example]]
name = "advanced_analytics"
path = "src/advanced_analytics.rs"

[[example]]
name = "all_examples"
path = "src/all_examples.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
